# NuclearMPM

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  nclr.cpp  nclr.h  pyproject.toml  setup.py  sifakis_svd.h  tqdm.h
python/: README.md  example.py  ioutils.py  requirements.txt  test_fixed_corotated_stress.py  test_grid_op.py  test_polar_decomp.py
python/nathan/: README.md  get_data.py  requirements.txt  rm_sim_data.py  run.py
src/: example.cpp  lib.rs  linear_algebra.rs  math.h  nclr.cpp  nclr.h  nclr_math.h  solver.cpp  taichi.h
