[package]
name = "nuclear_mpm"
version = "0.1.0"
edition = "2018"

[lib]
name = "nuclear_mpm"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.15.1", features = ["extension-module"] }
numpy = { vertsion = "0.15", features = ["rayon"] }
ndarray-linalg = { version = "0.14.1", features = ["openblas-system"] }
num = "0.4.0"
rayon = "1.5"
ndarray = "0.15.4"
